# akame

./: .gitignore  Cargo.toml  Makefile  README.md  WORKSPACE  hello.ak
c/: BUILD
c/lib/: printd.c
dev-bin/: akame  output.ll
examples/: hello.ak
llvm/: .gdb_history  akame  ir-linux  ir.ll  main.ll  std-linux  std.bc  std.ll  woah-darwin
ocaml/akame_parser/: codegen.ak  dune-project
ocaml/akame_parser/lib/: dune  lexer.ml  parser.ml
ocaml/akame_parser/test/: dune
rust/: .gitignore  BUILD  Cargo.toml  README.md  hello.out  main.ll  main.out  std.ll
rust/_build/: main.ll
rust/examples/: codegen.ak  hello.ak  println.ak
rust/src/: ast.rs  main.rs  utils.rs
rust/src/akame_interpreter/: interpreter.rs  mod.rs  repl.rs
rust/src/llvm/: ast.rs  codegen.rs  compiler.rs  mod.rs
rust/src/parsers/: array.rs  error.rs  expressions.rs  full_test.rs  functions.rs  mod.rs  statements.rs  tokens.rs
rust/src/red_interpreter/: interpreter.rs  mod.rs  repl.rs
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  main.rs  nom_parser.rs  parser.rs  repl.rs  tokens.rs
src/akame_interpreter/: interpreter.rs  mod.rs  repl.rs
src/llvm/: ast.rs  codegen.rs  compiler.rs  mod.rs
src/parsers/: functions.rs  mod.rs  statements.rs  tokens.rs
src/types/: integer.rs
vscode-extension/akame/: CHANGELOG.md  README.md  package.json  test.ak  vsc-extension-quickstart.md
vscode-extension/akame/syntaxes/: akame.tmLanguage.json
